Fix blueprint overlay z-index
Default value is smaller than the z-index of the overlay from the Monaco editor

--- a/web/rt-easy/src/index.css
+++ b/web/rt-easy/src/index.css
@@ -35,3 +35,7 @@ body,
 .noFocus:focus {
   outline: none !important;
 }
+
+.bp4-overlay-content {
+  z-index: 100 !important;
+}
